# gnss-converters-bazel

./: .bazelrc  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  Cargo.toml  Jenkinsfile  JenkinsfileAFL  README.md  WORKSPACE  ci-build.sh  sonar-project.properties  travis.sh
c/: .clang-tidy  CMakeLists.txt
c/afl/: CMakeLists.txt  make_afl_testcases.c  make_afl_testcases.h  make_rtcm_testcases.c  make_sbp_decoder_testcases.c  make_sbp_encoder_testcases.c
c/afl/helpers/sbp/: sbp_data.c  sbp_data.h
c/afl/testcases/rtcm3tosbp/: 1013.rtcm  README  make_999_stgsv_cn0_b12.rtcm
c/afl/testcases/sbp2sbp_decoder/: SbpMsgAcqResultDepA.sbp  SbpMsgAcqResultDepB.sbp  SbpMsgAcqResultDepC.sbp  SbpMsgAgeCorrections.sbp  SbpMsgAngularRate.sbp  SbpMsgBasePosEcef.sbp  SbpMsgBaselineEcef.sbp  SbpMsgBaselineEcefDepA.sbp  SbpMsgBaselineNed.sbp  SbpMsgBaselineNedDepA.sbp  SbpMsgBootloaderHandshakeResp.sbp  SbpMsgDeviceMonitor.sbp  SbpMsgDgnssStatus.sbp  SbpMsgDops.sbp  SbpMsgDopsDepA.sbp  SbpMsgEphemerisBds.sbp  SbpMsgEphemerisBds_multi_msg.sbp  SbpMsgFwd.sbp  (+85 more)
c/gnss_converters/: BUILD.bazel
c/gnss_converters/src/: CMakeLists.txt  common.c  nmea.c  options.c  rtcm3_sbp.c  rtcm3_sbp_ephemeris.c  rtcm3_sbp_internal.h  rtcm3_sbp_ssr.c  rtcm3_utils.c  rtcm3_utils.h  sbp_nmea.c  sbp_rtcm3.c  sbp_rtcm3_ephemeris.c  sbp_rtcm3_internal.h  time_truth_v2.cc  ubx_sbp.c
c/gnss_converters/test/: CMakeLists.txt  check_gnss_converters.h  check_gnss_converters_main.c  check_nmea.c  check_nmea_gpths.c  check_options.c  check_rtcm_time.c  check_sbp_rtcm.c  check_utils.c  config.h.in  static_vector.cc  time_truth.cc  time_truth.h  time_truth_v2.cc
c/gnss_converters_extra/: BUILD.bazel
c/gnss_converters_extra/src/: CMakeLists.txt  logging.c  sbp_conv.c  sbp_rtcm3.c  sbp_rtcm3_ephemeris.c  sbp_rtcm3_internal.h
c/gnss_converters_extra/test/: CMakeLists.txt  check_utils.c  test_sbp_conv.cc
c/include/gnss-converters/: nmea.h  rtcm3_sbp.h  sbp_nmea.h  time_truth.h  ubx_sbp.h
c/include/ixcom/: XCOMdat.h
c/include/rtcm3/: constants.h  messages.h
c/ixcom2sbp/: BUILD.bazel
c/ixcom2sbp/src/: CMakeLists.txt  ixcom2sbp.c  ixcom2sbp_main.c
c/ixcom2sbp/test/: CMakeLists.txt
c/libixcom/: BUILD.bazel
c/libixcom/src/: CMakeLists.txt
c/libixcom/test/: CMakeLists.txt
c/librtcm/: BUILD.bazel
c/librtcm/src/: CMakeLists.txt  bits.c  decode.c  encode.c  encode_helpers.h  eph_decode.c  eph_encode.c  librtcm_utils.c  ssr_decode.c  sta_decode.c
c/librtcm/test/: CMakeLists.txt  check_pedantic.cc  rtcm_decoder_tests.c  rtcm_decoder_tests.h  sta_rtcm3_tests.c
c/libubx/: BUILD.bazel
c/libubx/src/: CMakeLists.txt  decode.c
c/libubx/test/: CMakeLists.txt
c/nov2sbp/: BUILD.bazel
c/nov2sbp/parser/: CMakeLists.txt
c/nov2sbp/src/: CMakeLists.txt  nov2sbp.cc  nov2sbp_main.cc
c/observation_adjuster/: BUILD.bazel  CMakeLists.txt
c/observation_adjuster/helpers/: CMakeLists.txt
c/observation_adjuster/src/: CMakeLists.txt  binding.cc  epoch_adjuster.cc  message_matcher.cc  obs_unpacker.cc  observation_adjuster.cc  observation_adjuster_extern.cc  sbp_packer.cc  sbp_unpacker.cc
c/observation_adjuster/test/: CMakeLists.txt  check_binding.c  check_pedantic.cc  test_epoch_adjuster.cc  test_helpers.h  test_message_matcher.cc  test_obs_unpacker.cc  test_observation_adjuster.cc  test_sbp_obs_array.cc  test_sbp_packer.cc  test_sbp_unpacker.cc
c/rtcm3tosbp/: BUILD.bazel
c/rtcm3tosbp/src/: CMakeLists.txt  rtcm3tosbp.c  rtcm3tosbp_main.c  time_truth.cc  time_truth.h
c/rtcm3tosbp/test/: CMakeLists.txt  check_rtcm3.c  check_rtcm3.h  check_rtcm3_main.c  check_rtcm3_ssr.c
c/sbp2rtcm/: BUILD.bazel
c/sbp2rtcm/src/: CMakeLists.txt  sbp2rtcm.c  sbp2rtcm_main.c
c/sbp2sbp/: BUILD.bazel
c/sbp2sbp/src/: CMakeLists.txt  sbp2sbp_decoder.c  sbp2sbp_decoder_main.c  sbp2sbp_encoder.c  sbp2sbp_encoder_main.c
c/src/: CMakeLists.txt  decode.c  sta_decode.c
c/src/gnss_converters/: CMakeLists.txt  nmea.c  rtcm3_sbp.c  rtcm3_sbp_ephemeris.c  rtcm3_sbp_internal.h  rtcm3_sbp_ssr.c  sbp_nmea.c  time_truth.c  ubx_sbp.c
c/src/gnss_converters_extra/: CMakeLists.txt  sbp_conv.c  sbp_rtcm3.c
c/src/ixcom2sbp/: CMakeLists.txt  ixcom2sbp.c  ixcom2sbp_main.c
c/src/nov2sbp/: CMakeLists.txt  README.md  nov2sbp.cc  nov2sbp_main.cc  send_sbp_obs_messages.cc  swiftnav_conversion_helpers.cc  swiftnav_conversion_helpers.h
c/src/rtcm3tosbp/: CMakeLists.txt  rtcm3tosbp.c  rtcm3tosbp_main.c
c/src/sbp2rtcm/: CMakeLists.txt  sbp2rtcm.c  sbp2rtcm_main.c
c/src/ubx2sbp/: CMakeLists.txt  ubx2sbp.c  ubx2sbp_main.c  ubx2sbp_main.h
c/test/: CMakeLists.txt  check_pedantic.cc  rtcm_decoder_tests.c  rtcm_decoder_tests.h  sta_rtcm3_tests.c
c/tests/: CMakeLists.txt  check_ixcom.c  check_ixcom.h  check_main.c  check_nmea.c  check_nmea_gpths.c  check_rtcm3.c  check_rtcm3.h  check_rtcm3_ssr.c  check_rtcm3_time.c  check_suites.h  check_time_truth.c  check_ubx.c  check_ubx.h  check_utils.c  check_utils.h  nmea_truth.h
c/tests/afl/: make_rtcm_testcases.c
c/ubx2sbp/: BUILD.bazel
c/ubx2sbp/src/: CMakeLists.txt  time_truth.cc  time_truth.h  ubx2sbp.c  ubx2sbp_main.c
c/ubx2sbp/test/: CMakeLists.txt  check_ubx2sbp.c
rust/: Cargo.toml  build.rs  egm96_15.gtx.xz  ixcom2sbp.rs  lib.rs  nov2sbp.rs  proj.db.xz  rtcm3tosbp.rs  sbp2rtcm.rs  ubx2json.rs  ubx2sbp.rs
rust/rtcm/: Cargo.toml  README.md  build.rs
rust/rtcm/json2rtcm/: Cargo.toml
rust/rtcm/json2rtcm3/: Cargo.toml
rust/rtcm/mrtjs2rtjs/: Cargo.toml
rust/rtcm/rtcm/: Cargo.toml
rust/rtcm/rtcm2json/: Cargo.toml  build.rs
rust/rtcm/rtcm32json/: Cargo.toml
rust/rtcm/src/: base64.rs  lib.rs
rust/rtcm/test_data/: 1230-2.rtcm  length_zero.rtcm  msm2.rtcm  msm4.rtcm  msm5.rtcm  msm7.rtcm  sbp.rtcm
rust/rtcm2json/rtcm/: Cargo.toml
rust/rtcm2json/rtcm_cli/: Cargo.toml
rust/tests/: lib.rs
rust/tests/data/: piksi-5Hz_signed.expanded  piksi-5Hz_signed.expanded_plus_timestamps  piksi-5Hz_signed.minimal  piksi-5Hz_signed.minimal_plus_timestamps  piksi-5Hz_signed.rtcm  piksi-5Hz_signed_seconds_as_strings.minimal_plus_timestamps
toolchain/: BUILD.bazel  step_toolchain_config.bzl
(+255 files in other folders)
