[package]
name = "gnss-converters"
version = "1.0.0"
authors = ["Swift Navigation <dev@swiftnav.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "rtcm3tosbp"
path = "rtcm3tosbp.rs"

[[bin]]
name = "ubx2sbp"
path = "ubx2sbp.rs"

[[bin]]
name = "ubx2json"
path = "ubx2json.rs"
required-features = ["ublox", "serde_json"]

[[bin]]
name = "sbp2rtcm"
path = "sbp2rtcm.rs"

[[bin]]
name = "ixcom2sbp"
path = "ixcom2sbp.rs"

[[bin]]
name = "nov2sbp"
path = "nov2sbp.rs"
required-features = ["nov2sbp"]

[[test]]
name = "native-converters"
path = "tests/lib.rs"

[lib]
name = "gnss_converters"
path = "lib.rs"

[features]
default = []
nov2sbp = []

[dependencies]
libc = "0.2"
lazy_static = "1"
if_chain = "1"
ublox = { git = "https://github.com/swift-nav/ublox", branch = "adrian/serialize", optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
num_cpus = "1"
cmake = "0.1"
cc = "1.0"

[dev-dependencies]
assert_cmd = "2.0.1"
predicates = "2.0.2"
sbp = "4.0"
rtcm = { path = "rtcm/rtcm" }
tempfile = "3.2"
