load(":step_toolchain_config.bzl", "step_toolchain_config")

filegroup(name = "empty")

constraint_value(
    name = "armv7ve",
    constraint_setting = "@platforms//cpu"
)

platform(
    name = "step",
    constraint_values = [
        "@platforms//os:linux",
        ":armv7ve",
    ],
)

step_toolchain_config(name = "step_toolchain_config")

cc_toolchain(
    name = "step_cc_toolchain",
    toolchain_identifier = "step-toolchain",
    toolchain_config = ":step_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

toolchain(
    name = "step_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        ":armv7ve",
    ],
    toolchain = ":step_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

