load("@gnss-converters//bazel:swift_cc_defs.bzl", "UNIT", "swift_cc_library", "swift_cc_test")

swift_cc_library(
    name = "gnss_converters_extra",
    srcs = [
        "src/logging.c",
        "src/sbp_conv.c",
    ],
    hdrs = [
        "include/gnss-converters-extra/logging.h",
        "include/gnss-converters-extra/sbp_conv.h",
    ],
    copts = [
        "-UNDEBUG",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//c/gnss_converters",
        "//c/librtcm:rtcm",
        "@libsbp//c:sbp",
        "@libswiftnav//:swiftnav",
    ],
)

swift_cc_test(
    name = "gnss_converters_extra_test",
    srcs = [
        "test/test_sbp_conv.cc",
    ],
    type = UNIT,
    deps = [
        ":gnss_converters_extra",
        "//c/gnss_converters",
        "@gtest//:gtest_main",
    ],
)
