load("@gnss-converters//bazel:configure_file.bzl", "configure_file", "var")
load("@gnss-converters//bazel:swift_cc_defs.bzl", "UNIT", "swift_cc_test", "swift_cc_tool", "swift_cc_tool_library")

swift_cc_tool_library(
    name = "ixcom2sbp_impl",
    srcs = [
        "src/ixcom2sbp.c",
    ],
    hdrs = [
        "src/include/ixcom2sbp/internal/ixcom2sbp.h",
    ],
    includes = ["src/include"],
    deps = [
        "//c/gnss_converters",
    ],
)

swift_cc_tool(
    name = "ixcom2sbp",
    srcs = [
        "src/ixcom2sbp_main.c",
    ],
    deps = [
        ":ixcom2sbp_impl",
    ],
)

configure_file(
    name = "config",
    out = "config.h",
    template = "test/config.h.in",
    vars = var("RELATIVE_PATH_PREFIX", "c/ixcom2sbp/test"),
)

swift_cc_test(
    name = "ixcom2sbp_test",
    srcs = [
        "test/check_ixcom2sbp.c",
        ":config",
    ],
    data = [
        "test/data/ixcom_imuraw.bin",
        "test/data/ixcom_wheeldata.bin",
    ],
    includes = ["."],
    type = "unit",
    deps = [
        "//c/gnss_converters",
        "@check",
    ],
)
