load("@gnss-converters//bazel:swift_cc_defs.bzl", "UNIT", "swift_cc_library", "swift_cc_test")

swift_cc_library(
    name = "ixcom",
    srcs = [
        "src/decode.c",
        "src/encode.c",
        "src/messages.c",
    ],
    hdrs = [
        "include/ixcom/XCOMdat.h",
        "include/ixcom/decode.h",
        "include/ixcom/encode.h",
        "include/ixcom/messages.h",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@libswiftnav//:swiftnav",
    ],
)

swift_cc_test(
    name = "libixcom_test",
    type = UNIT,
    srcs = [
        "test/check_ixcom.c",
        "test/check_main.c",
        "test/check_suites.h",
    ],
    deps = [
        ":ixcom",
        "@check//:check",
    ],
)

swift_cc_test(
    name = "libixcom_pedantic_test",
    type = UNIT,
    srcs = [
        "test/check_pedantic.cc",
    ],
    copts = [
        "-pedantic",
    ],
    deps = [
        ":ixcom",
    ],
)
