load("@gnss-converters//bazel:swift_cc_defs.bzl", "UNIT", "swift_cc_library", "swift_cc_test")

swift_cc_library(
    name = "ubx",
    srcs = [
        "src/decode.c",
        "src/encode.c",
        "src/include/libubx/internal/decode_helpers.h",
    ],
    hdrs = [
        "include/ubx/constants.h",
        "include/ubx/decode.h",
        "include/ubx/encode.h",
        "include/ubx/ubx_messages.h",
    ],
    includes = [
        "include",
        "src/include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@libswiftnav//:swiftnav",
    ],
)

swift_cc_test(
    name = "libubx_test",
    type = UNIT,
    srcs = [
        "test/check_main.c",
        "test/check_suites.h",
        "test/check_ubx.c",
    ],
    deps = [
        ":ubx",
        "@check",
    ],
)

swift_cc_test(
    name = "libubx_pedantic_test",
    type = UNIT,
    srcs = [
        "test/check_pedantic.cc",
    ],
    copts = [
        "-pedantic",
    ],
    deps = [
        ":ubx",
    ],
)
