load("@gnss-converters//bazel:swift_cc_defs.bzl", "UNIT", "swift_cc_tool", "swift_cc_tool_library", "swift_cc_test")

swift_cc_tool_library(
    name = "novatel_parser",
    srcs = [
        "parser/binary_header.cc",
        "parser/binary_header.h",
        "parser/crc_checker.cc",
        "parser/crc_checker.h",
        "parser/message.h",
        "parser/message_bestpos.cc",
        "parser/message_bestpos.h",
        "parser/message_bestvel.cc",
        "parser/message_bestvel.h",
        "parser/message_gloephemeris.cc",
        "parser/message_gloephemeris.h",
        "parser/message_gpsephem.cc",
        "parser/message_gpsephem.h",
        "parser/message_insatt.cc",
        "parser/message_insatt.h",
        "parser/message_rangecmp.cc",
        "parser/message_rangecmp.h",
        "parser/message_rawimusx.cc",
        "parser/message_rawimusx.h",
        "parser/parser.cc",
        "parser/parser.h",
        "parser/read_little_endian.h",
    ],
    includes = ["."],
    nocopts = [
        "-Wconversion",
        "-Wstack-protector"
    ],
    deps = [
        "@libswiftnav//:swiftnav",
    ],
)

swift_cc_tool_library(
    name = "nov2sbp_impl",
    srcs = [
        "parser/novatel.h",
        "src/nov2sbp.cc",
        "src/send_sbp_obs_messages.cc",
        "src/swiftnav_conversion_helpers.cc",
        "src/swiftnav_conversion_helpers.h",
    ],
    hdrs = [
        "src/include/nov2sbp/internal/nov2sbp.h",
    ],
    copts = ["-UNDEBUG"],
    includes = ["src/include"],
    nocopts = ["-Wconversion"],
    deps = [
        ":novatel_parser",
        "@libsbp//c:sbp",
        "@libswiftnav//:swiftnav",
    ],
)

swift_cc_tool(
    name = "nov2sbp",
    srcs = [
        "src/nov2sbp_main.cc",
    ],
    copts = [
        "-UNDEBUG",
    ],
    deps = [
        ":nov2sbp_impl",
    ],
)
