load("@gnss-converters//bazel:swift_cc_defs.bzl", "swift_cc_tool", "swift_cc_tool_library")

swift_cc_tool_library(
    name = "sbp2rtcm_impl",
    srcs = [
        "src/sbp2rtcm.c",
    ],
    hdrs = [
        "src/include/sbp2rtcm/internal/sbp2rtcm.h",
    ],
    includes = ["src/include"],
    deps = [
            "//c/gnss_converters:gnss_converters",
    ],
)

swift_cc_tool(
    name = "sbp2rtcm",
    srcs = [ "src/sbp2rtcm_main.c" ],
    deps = [ ":sbp2rtcm_impl" ],
)

