load("@gnss-converters//bazel:swift_cc_defs.bzl", "swift_cc_tool", "swift_cc_tool_library")

swift_cc_tool_library(
    name = "sbp2sbp_decoder_impl",
    srcs = [
        "src/include/sbp2sbp/internal/sbp2sbp_decoder.h",
        "src/include/sbp2sbp/internal/sbp2sbp_io_function.h",
        "src/sbp2sbp_decoder.c",
    ],
    includes = ["src/include"],
    nocopts = ["-Wconversion"],
    deps = [
        "@libsbp//c:sbp",
        "@libswiftnav//:swiftnav",
    ],
)

swift_cc_tool(
    name = "sbp2sbp_decoder",
    srcs = ["src/sbp2sbp_decoder_main.c"],
    nocopts = ["-Wconversion"],
    deps = [":sbp2sbp_decoder_impl"],
)

swift_cc_tool_library(
    name = "sbp2sbp_encoder_impl",
    srcs = [
        "src/include/sbp2sbp/internal/sbp2sbp_encoder.h",
        "src/include/sbp2sbp/internal/sbp2sbp_io_function.h",
        "src/sbp2sbp_encoder.c",
    ],
    includes = ["src/include"],
    nocopts = ["-Wconversion"],
    deps = [
        "@libsbp//c:sbp",
        "@libswiftnav//:swiftnav",
    ],
)

swift_cc_tool(
    name = "sbp2sbp_encoder",
    srcs = ["src/sbp2sbp_encoder_main.c"],
    nocopts = ["-Wconversion"],
    deps = [":sbp2sbp_encoder_impl"],
)
