load("@gnss-converters//bazel:swift_cc_defs.bzl", "UNIT", "swift_cc_test", "swift_cc_tool", "swift_cc_tool_library")
load("@gnss-converters//bazel:configure_file.bzl", "configure_file", "var")

swift_cc_tool_library(
    name = "ubx2sbp_impl",
    srcs = [
        "src/include/ubx2sbp/internal/time_truth.h",
        "src/include/ubx2sbp/internal/ubx2sbp.h",
        "src/time_truth.cc",
        "src/ubx2sbp.c",
    ],
    includes = ["src/include"],
    deps = [
        "//c/gnss_converters",
    ],
)

swift_cc_tool(
    name = "ubx2sbp",
    srcs = ["src/ubx2sbp_main.c"],
    deps = [":ubx2sbp_impl"],
)

configure_file(
    name = "config",
    out = "config.h",
    template = "test/config.h.in",
    vars = var("RELATIVE_PATH_PREFIX", "c/ubx2sbp/test"),
)

swift_cc_test(
    name = "ubx2sbp_test",
    srcs = [
        "test/check_ubx2sbp.c",
        ":config",
    ],
    data = glob(["test/data/**"]),
    includes = ["."],
    type = UNIT,
    deps = [
        ":ubx2sbp_impl",
        "@check",
    ],
)
